<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RFA Booking Futsal</string>
    <string name="app_name_2">Booking Futsal</string>
    <string name="action_settings">Settings</string>
    <string name="action_done">Done</string>
    <string name="action_reset">Reset</string>
    <string name="action_home">Home</string>
    <string name="action_jadwal">Jadwal</string>
    <string name="action_kontak">Kontak</string>
    <string name="action_tentang">Tentang</string>
    <string name="lapang">Lapang</string>
    <string name="lapang1">Lapang 1</string>
    <string name="lapang2">Lapang 2</string>

    <!-- Dialog -->
    <string name="dialog_norek">No Rekening</string>
    <string name="dialog_booking">Booking</string>
    <string name="dialog_lawan_booking">Lawan Booking</string>
    <string name="dialog_atas_nama">A/N</string>
    <string name="dialog_tanggal">Tanggal</string>
    <string name="dialog_no_hp">No Handphone</string>
    <string name="dialog_jumlah_transfer">Jumlah Transfer</string>
    <string name="dialog_status">Status</string>
    <string name="dialog_kode_booking">Kode Booking</string>
    <string name="dialog_sumit">Submit</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_mohon">Mohon untuk login terlebih dahulu sebelum booking.</string>

    <!-- Login -->
    <string name="login_progress">Log In&#8230;</string>
    <string name="prompt_username">            Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username_email">Username or Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="action_login">Login</string>

    <!-- Register -->
    <string name="register_progress">Register&#8230;</string>
    <string name="action_register">Register</string>

    <!-- Error -->
    <string name="error_invalid">This is invalid</string>
    <string name="error_invalid_username_email">This username or email address is invalid</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_username">Usernames must be at least 5 characters.</string>
    <string name="error_incorrect_username">This username is invalid</string>
    <string name="error_invalid_password">Passwords must be at least 5 characters.</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- Forgot -->
    <string name="forgot_progress">&#8230;</string>
    <string name="forgot_description">Enter your username or the email address associated with your account.</string>
    <string name="forgot_password_success_message">Check your email to find out how to change your password</string>

    <!-- week-view -->
    <string name="action_today">Go to today</string>
    <string name="action_day_view">Day view</string>
    <string name="action_three_day_view">3 day view</string>
    <string name="action_week_view">Week view</string>

    <!-- profil -->
    <string name="profil">Selamat datang di RFA</string>
    <string name="profil1">Apa itu RFA?</string>
    <string name="profil2">RFA (Rancaekek Futsal Arena) beralamatkan di Jalan Walini (Bojongjati)-Bandung ini merupakan lembaga yang bergerak di bidang Penyewaan lapangan futsal.</string>
    <string name="profil3">Ada apa saja di RFA?</string>
    <string name="profil4">RFA memiliki 2 buah lapang futsal yang sangat megah dengan standar internasional. Tak hanya futsal, RFA memiliki sebuah warnet dalam satu gedung dengan lapang futsal. Jadi apabila bosan menunggu jadwal,pelanggan bisa menunggu dengan berselancar di dunia maya.</string>
    <string name="profil5">Bosan main dengan tim sendiri?</string>
    <string name="profil6">Apa bila bosan bermain dengan tim, dalam aplikasi ini menyediakan fitur cari lawan. Namun hanya member yang dapat menikmati fitur ini.</string>
    <string name="profil7">Bagaimana cara ingin memesan jadwal?</string>
    <string name="profil8">Jika ingin membooking/memesan jadwal anda hanya perlu membuat akun dan login. Kemudian pilih jadwal yang di inginkan dan transfer ke rekening yang sudah di sediakan dalam form pemesanan.</string>
    <string name="profil9">Tertarik dengan aplikasi ini??? Buruan daftar dan login dan nikmati fitur yang di sediakan pada aplikasi ini.</string>

    <!-- kontak -->
    <string name="kontak">Kontak\n\n</string>
    <string name="kontak1">RFA\n(022) 779 64 26\n\n Atau</string>

    <!-- bantuan -->
    <string name="bantuan">Bantuan</string>
    <string name="bantuan1">Apa itu RFA?</string>
    <string name="bantuan2">RFA merupakan sebuah tempat futsal di daerah Rancaekek, Bandung.</string>
    <string name="bantuan3">Cara memesan?</string>
    <string name="bantuan4">    a.Daftar akun
	\nb.Login
	\nc.Pilih jadwal
	\nd.Transfer ke rekening yang disediakan
	\ne.Tunggu konfirmasi
	\nf.Selesai dan dapat jadwal</string>

    <!-- lapang array -->
    <string-array name="nama_lapang">
        <item>Lapang</item>
        <item>Lapang-1</item>
        <item>Lapang-2</item>
    </string-array>

</resources>