<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f0eb" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="5dp" >

        <ImageView
            android:id="@+id/splashimg"
            android:layout_width="96dp"
            android:layout_height="128dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:src="@drawable/rfa_home" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profil"
            android:layout_gravity="center"
            android:textColor="@color/ungu"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profil1"
            android:textColor="@color/ungu"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profil2"
            android:textColor="@color/actionbar_bg_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profil3"
            android:textColor="@color/ungu"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profil4"
            android:textColor="@color/actionbar_bg_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profil5"
            android:textColor="@color/ungu"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profil6"
            android:textColor="@color/actionbar_bg_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profil7"
            android:textColor="@color/ungu"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profil8"
            android:textColor="@color/actionbar_bg_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/profil9"
            android:textColor="@color/ungu"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>