<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f0eb" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="5dp" >

        <TextView
            android:id="@+id/bantuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/bantuan"
            android:textColor="@color/ungu"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bantuan1"
            android:textColor="@color/ungu"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bantuan2"
            android:textColor="@color/actionbar_bg_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bantuan3"
            android:textColor="@color/ungu"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bantuan4"
            android:textColor="@color/actionbar_bg_color"
            android:textSize="16sp" />
    </LinearLayout>

</ScrollView>