<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_dialog"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_dialog"
        android:layout_marginLeft="@dimen/margin_dialog"
        android:layout_marginRight="@dimen/margin_dialog"
        android:layout_marginTop="@dimen/margin_dialog"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_dialog"
                android:text="@string/dialog_booking"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <Spinner
                android:id="@+id/rekening"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:hint="@string/dialog_status" />

            <Spinner
                android:id="@+id/lapang"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:hint="@string/lapang" />

            <EditText
                android:id="@+id/nama"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_atas_nama"
                android:inputType="textShortMessage" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal" >

                <Spinner
                    android:id="@+id/jam_mulai"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="50" />

                <Spinner
                    android:id="@+id/jam_akhir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="50" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/tanggal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/dialog_tanggal"
                    android:inputType="date" />

                <ImageView
                    android:id="@+id/pick_tanggal"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="right|center_vertical"
                    android:src="@drawable/ic_calendar" />
            </LinearLayout>

            <EditText
                android:id="@+id/jumlah_transfer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_jumlah_transfer"
                android:inputType="number" />

            <EditText
                android:id="@+id/nohp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_no_hp"
                android:inputType="number" />

            <Spinner
                android:id="@+id/jenisbooking"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:hint="@string/dialog_status" />

            <EditText
                android:id="@+id/KodeBoooking"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/dialog_kode_booking" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="@dimen/margin_dialog"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/dialog_cancel" />

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/dialog_sumit" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>