<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    tools:context=".ForgotActivity" >

    <!-- forgot progress -->

    <LinearLayout
        android:id="@+id/forgot_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/forgot_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/forgot_progress"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <!-- forgot form -->

    <ScrollView
        android:id="@+id/forgot_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp" >

            <EditText
                android:id="@+id/usernameEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_username_email"
                android:imeActionId="@+id/reset_button"
                android:imeActionLabel="@string/action_done"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/reset_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="50"
                    android:background="@drawable/button_style_yellow"
                    android:text="@string/action_reset"
                    android:textColor="#fff" />

                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="50"
                    android:background="@drawable/button_style_red"
                    android:text="@string/dialog_cancel"
                    android:textColor="#fff" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</merge>