<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_today"
        android:icon="@drawable/ic_action_go_to_today"
        android:showAsAction="always"
        android:title="@string/action_today"/>
    <item
        android:id="@+id/item2"
        android:icon="@drawable/abs__ic_menu_moreoverflow_normal_holo_dark"
        android:showAsAction="always"
        android:title="Menu">
        <menu>
            <group android:checkableBehavior="single" >
                <item
                    android:id="@+id/action_three_day_view"
                    android:checked="true"
                    android:orderInCategory="100"
                    android:showAsAction="ifRoom"
                    android:title="@string/action_three_day_view"/>
                <item
                    android:id="@+id/action_week_view"
                    android:orderInCategory="100"
                    android:showAsAction="ifRoom"
                    android:title="@string/action_week_view"/>
            </group>

            <item
                android:id="@+id/item_booking"
                android:orderInCategory="100"
                android:showAsAction="ifRoom"
                android:title="Booking Lapang"/>
            <item
                android:id="@+id/item_login"
                android:orderInCategory="100"
                android:showAsAction="ifRoom"
                android:title="Login"/>
            <item
                android:id="@+id/item_profile"
                android:orderInCategory="100"
                android:showAsAction="ifRoom"
                android:title="Profile"/>
            <item
                android:id="@+id/item_exit"
                android:orderInCategory="100"
                android:showAsAction="ifRoom"
                android:title="Logout"/>
        </menu>
    </item>

</menu>